--- a/index.html
+++ b/index.html
@@ -3,14 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bitcoin Data Visualization</title>
+    <title>Visualización de Datos de Bitcoin</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 <body>
     <div class="container">
-        <h1 class="text-center my-4">Bitcoin Data Visualization</h1>
-        <!-- Content will go here -->
+        <h1 class="text-center my-4">Visualización de Datos de Bitcoin</h1>
+        <div id="bitcoin-chart" style="width:100%;height:500px;"></div>
+        <div id="bitcoin-bar-chart" style="width:100%;height:500px;"></div>
+        <div class="table-responsive">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>Fecha</th>
+                        <th>Precio (USD)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>2021-01-01</td>
+                        <td>$29,000</td>
+                    </tr>
+                    <tr>
+                        <td>2021-02-01</td>
+                        <td>$33,000</td>
+                    </tr>
+                    <tr>
+                        <td>2021-03-01</td>
+                        <td>$45,000</td>
+                    </tr>
+                    <tr>
+                        <td>2021-04-01</td>
+                        <td>$60,000</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
+    <script src="script.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
