--- a/index.html
+++ b/index.html
@@ -4,21 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visualización de Datos de Bitcoin</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1 class="text-center my-4">Visualización de Datos de Bitcoin</h1>
-        <div id="bitcoin-chart" style="width:100%;height:500px;"></div>
-        <div id="bitcoin-bar-chart" style="width:100%;height:500px;"></div>
-        <div class="table-responsive">
+        <header class="my-4 text-center">
+            <h1>Visualización de Datos de Bitcoin</h1>
+            <p class="lead">Análisis de precios de Bitcoin a lo largo del tiempo</p>
+        </header>
+        <section id="charts" class="my-4">
+            <div id="chart1" class="mb-4"></div>
+        </section>
+        <section id="tables" class="my-4">
+            <h2>Tabla de Precios de Bitcoin</h2>
             <table class="table table-striped">
                 <thead>
                     <tr>
                         <th>Fecha</th>
-                        <th>Precio (USD)</th>
+                        <th>Precio</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -40,11 +45,22 @@
                     </tr>
                 </tbody>
             </table>
-        </div>
+        </section>
+        <section id="images" class="my-4">
+            <h2>Galería de Imágenes</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="bitcoin1.jpg" class="img-fluid" alt="Bitcoin Image 1">
+                </div>
+                <div class="col-md-4">
+                    <img src="bitcoin2.jpg" class="img-fluid" alt="Bitcoin Image 2">
+                </div>
+                <div class="col-md-4">
+                    <img src="bitcoin3.jpg" class="img-fluid" alt="Bitcoin Image 3">
+                </div>
+            </div>
+        </section>
     </div>
-    <script src="script.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
