--- a/index.html
+++ b/index.html
@@ -109,26 +109,20 @@
         </section>
         
         <!-- Image Gallery -->
-        <section id="images" class="my-4">
-            <h2>Galería de Imágenes</h2>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="card">
-                        <img src="bitcoin1.jpg" class="img-fluid" alt="Bitcoin Image 1">
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card">
-                        <img src="bitcoin2.jpg" class="img-fluid" alt="Bitcoin Image 2">
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card">
-                        <img src="bitcoin3.jpg" class="img-fluid" alt="Bitcoin Image 3">
-                    </div>
-                </div>
-            </div>
-        </section>
+   <section id="images" class="my-4">
+    <h2>Galería de Imágenes</h2>
+    <div class="row">
+        <div class="col-md-4">
+            <img src="https://cryptologos.cc/logos/bitcoin-btc-logo.png" class="img-fluid" alt="Bitcoin Image 1">
+        </div>
+        <div class="col-md-4">
+            <img src="https://example.com/bitcoin-image2.jpg" class="img-fluid" alt="Bitcoin Image 2">
+        </div>
+        <div class="col-md-4">
+            <img src="https://example.com/bitcoin-image3.jpg" class="img-fluid" alt="Bitcoin Image 3">
+        </div>
+    </div>
+</section>
         
         <!-- Footer -->
         <footer>
