--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visualización de Datos de Bitcoin</title>
+    <title>Visualitation Bitcoin Data/title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <link rel="stylesheet" href="styles.css">
@@ -116,7 +116,7 @@
             <img src="https://cryptologos.cc/logos/bitcoin-btc-logo.png" class="img-fluid" alt="Bitcoin Image 1">
         </div>
         <div class="col-md-4">
-            <img src="https://example.com/bitcoin-image2.jpg" class="img-fluid" alt="Bitcoin Image 2">
+            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIF.WPaxc7eM%252fABl1yy0%252bXag8Q%26pid%3DApi&f=1&ipt=523b22d09927e3627de2796d3d28cda5b5144126843013e6d99a8ecfff2ed128&ipo=images" class="img-fluid" alt="Bitcoin Image 2">
         </div>
         <div class="col-md-4">
             <img src="https://example.com/bitcoin-image3.jpg" class="img-fluid" alt="Bitcoin Image 3">
