--- a/index.html
+++ b/index.html
@@ -108,8 +108,9 @@
             </table>
         </section>
         
-        <!-- Image Gallery -->
-   <section id="images" class="my-4">
+    <!-- Image Gallery -->
+<section id="images" class="my-4">
+    <h2 class="text-center">Galería de Imágenes</h2>
     <div class="row">
         <div class="col-md-4">
             <img src="https://cryptologos.cc/logos/bitcoin-btc-logo.png" class="img-fluid" alt="Bitcoin Image 1">
