--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visualitation Bitcoin Data/title>
+    <title>Visualitation Bitcoin Data</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.plot.ly/plotly-latest.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" defer></script>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -108,23 +108,21 @@
             </table>
         </section>
         
- 
-</section>
-<!-- Image section -->
-<section id="images" class="my-4">
-    <h2>Galería de Imágenes</h2>
-    <div class="row">
-        <div class="col-md-4">
-            <img src="https://cryptologos.cc/logos/bitcoin-btc-logo.png" class="img-fluid" alt="Bitcoin Image 1">
-        </div>
-        <div class="col-md-4">
-            <img src="https://example.com/bitcoin-image2.jpg" class="img-fluid" alt="Bitcoin Image 2">
-        </div>
-        <div class="col-md-4">
-            <img src="https://example.com/bitcoin-image3.jpg" class="img-fluid" alt="Bitcoin Image 3">
-        </div>
-    </div>
-</section>
+        <!-- Image Section -->
+        <section id="images" class="my-4">
+            <h2>Galería de Imágenes</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="https://cryptologos.cc/logos/bitcoin-btc-logo.png" class="img-fluid" alt="Bitcoin Image 1">
+                </div>
+                <div class="col-md-4">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/4/46/Bitcoin.svg" class="img-fluid" alt="Bitcoin Image 2">
+                </div>
+                <div class="col-md-4">
+                    <img src="https://cryptologos.cc/logos/bitcoin-btc-logo.png" class="img-fluid" alt="Bitcoin Image 3">
+                </div>
+            </div>
+        </section>
 
         <!-- Footer -->
         <footer>
@@ -133,41 +131,7 @@
     </div>
 
     <script>
-        // Chart 1 - Line Chart
-        const trace1 = {
-            x: ['2021-01-01', '2021-02-01', '2021-03-01', '2021-04-01'],
-            y: [29000, 33000, 45000, 60000],
-            mode: 'lines+markers',
-            name: 'Precio de Bitcoin',
-            line: { color: '#f7931a' }
-        };
-
-        const layout1 = {
-            title: 'Bitcoin Price Over Time',
-            xaxis: { title: 'Fecha' },
-            yaxis: { title: 'Precio en USD' }
-        };
-
-        Plotly.newPlot('chart1', [trace1], layout1);
-
-        // Chart 2 - Candlestick Chart
-        const trace2 = {
-            x: ['2021-01', '2021-02', '2021-03', '2021-04'],
-            close: [33000, 45000, 60000, 55000],
-            high: [34000, 46000, 62000, 58000],
-            low: [28000, 32000, 44000, 50000],
-            open: [29000, 33000, 45000, 54000],
-            type: 'candlestick',
-            name: 'Bitcoin'
-        };
-
-        const layout2 = {
-            title: 'Bitcoin Monthly Performance',
-            xaxis: { title: 'Mes' },
-            yaxis: { title: 'Precio en USD' }
-        };
-
-        Plotly.newPlot('chart2', [trace2], layout2);
+        // JavaScript del gráfico aquí
     </script>
 </body>
 </html>
